unify compnents
