# api.yml
@@ -27,14 +27,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/LoginRequest'
+              $ref: '#/components/schemas/BaseUser'
       responses:
         '200':
           description: success response for POST /login
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/LoginResponse'
+                $ref: '#/components/schemas/BaseUser'
         default:
           description: error response for POST /login
           content:
@@ -52,14 +52,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateUserRequest'
+              $ref: '#/components/schemas/BaseUser'
       responses:
         '201':
           description: success response for POST /users
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CreateUserResponse'
+                $ref: '#/components/schemas/BaseUser'
         default:
           description: error response for POST /users
           content:
@@ -87,7 +87,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ProfileResponse'
+                $ref: '#/components/schemas/BaseUser'
         default:
           description: error response for GET users/{id}
           content:
@@ -113,14 +113,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UpdateUser'
+              $ref: '#/components/schemas/BaseUser'
       responses:
         '200':
           description: success response for PATCH /users/{id}
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UpdateUser'
+                $ref: '#/components/schemas/BaseUser'
         default:
           description: error response for PATCH /users/{id}
           content:
@@ -136,74 +136,26 @@ components:
       bearerFormat: JWT
 
   schemas:
-    CreateUserRequest:
+    BaseUser:
       type: object
-      required:
-        - phone
-        - full_name
-        - password
       properties:
+        id:
+          type: integer
+          format: int64
+          x-go-type-skip-optional-pointer: true
+          example: 1
         phone:
           type: string
+          x-go-type-skip-optional-pointer: true
         full_name:
           type: string
+          x-go-type-skip-optional-pointer: true
         password:
           type: string
-
-    CreateUserResponse:
-      type: object
-      required:
-        - id
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 1
-
-    LoginRequest:
-      type: object
-      required:
-        - phone
-        - password
-      properties:
-        phone:
-          type: string
-        password:
-          type: string
-
-    LoginResponse:
-      type: object
-      required:
-        - id
-        - token
-      properties:
-        id:
-          type: integer
-          format: int64
+          x-go-type-skip-optional-pointer: true
         token:
           type: string
-
-    ProfileResponse:
-      type: object
-      required:
-        - phone
-        - full_name
-      properties:
-        phone:
-          type: string
-        full_name:
-          type: string
-
-    UpdateUser:
-      type: object
-      required:
-        - phone
-        - full_name
-      properties:
-        phone:
-          type: string
-        full_name:
-          type: string
+          x-go-type-skip-optional-pointer: true
 
     ErrorResponse:
       type: object
@@ -235,7 +187,3 @@ components:
           type: string
           x-go-type-skip-optional-pointer: true
 
-
-
-# TODO: can unify response or request to same user component
-# can be User compenent and add omit omit
